@@ -2278,7 +2278,7 @@ static bool cp_parser_check_type_definition
 static void cp_parser_check_for_definition_in_return_type
   (cp_declarator *, tree, location_t type_location);
 static void cp_parser_check_for_invalid_template_id
-  (cp_parser *, tree, location_t location);
+  (cp_parser *, tree, enum tag_types, location_t location);
 static bool cp_parser_non_integral_constant_expression
   (cp_parser *, non_integral_constant);
 static void cp_parser_diagnose_invalid_type_name
@@ -2551,7 +2551,9 @@ cp_parser_check_for_definition_in_return_type (cp_declarator *declarator,
 
 static void
 cp_parser_check_for_invalid_template_id (cp_parser* parser,
-					 tree type, location_t location)
+					 tree type,
+					 enum tag_types tag_type,
+					 location_t location)
 {
   cp_token_position start = 0;
 
@@ -2560,7 +2562,12 @@ cp_parser_check_for_invalid_template_id (cp_parser* parser,
       if (TYPE_P (type))
 	error_at (location, "%qT is not a template", type);
       else if (TREE_CODE (type) == IDENTIFIER_NODE)
-	error_at (location, "%qE is not a template", type);
+	{
+	  if (tag_type != none_type)
+	    error_at (location, "%qE is not a class template", type);
+	  else
+	    error_at (location, "%qE is not a template", type);
+	}
       else
 	error_at (location, "invalid template-id");
       /* Remember the location of the invalid "<".  */
@@ -13668,7 +13675,8 @@ cp_parser_simple_type_specifier (cp_parser* parser,
       /* There is no valid C++ program where a non-template type is
 	 followed by a "<".  That usually indicates that the user thought
 	 that the type was a template.  */
-      cp_parser_check_for_invalid_template_id (parser, type, token->location);
+      cp_parser_check_for_invalid_template_id (parser, type, none_type,
+					       token->location);
 
       return TYPE_NAME (type);
     }
@@ -13770,6 +13778,7 @@ cp_parser_simple_type_specifier (cp_parser* parser,
 	 followed by a "<".  That usually indicates that the user
 	 thought that the type was a template.  */
       cp_parser_check_for_invalid_template_id (parser, TREE_TYPE (type),
+					       none_type,
 					       token->location);
     }
 
@@ -14273,7 +14282,8 @@ cp_parser_elaborated_type_specifier (cp_parser* parser,
 
   /* A "<" cannot follow an elaborated type specifier.  If that
      happens, the user was probably trying to form a template-id.  */
-  cp_parser_check_for_invalid_template_id (parser, type, token->location);
+  cp_parser_check_for_invalid_template_id (parser, type, tag_type,
+					   token->location);
 
   return type;
 }
@@ -18429,6 +18439,7 @@ cp_parser_class_head (cp_parser* parser,
   if (id)
     {
       cp_parser_check_for_invalid_template_id (parser, id,
+					       class_key,
                                                type_start_token->location);
     }
   virt_specifiers = cp_parser_virt_specifier_seq_opt (parser);
